# gateway

./: .dockerignore  .flake8  .gitignore  .gitmodules  .hound.yml  .pre-commit-config.yaml  .readthedocs.yml  .renovaterc  .tarignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pull_repos.sh
.ci/: apply-style.sh  build-images.sh  build.sh  create_release.sh  deploy-docker.sh  deploy-pypi.sh  fetch-artifacts.sh  install-devtools.sh  install-repo.sh  releases.sh  requirements.sh  service-tests.sh  style-check.sh  test-template-generation.sh
.github/: SECURITY.md  pull_request_template.md
container/: .dockerignore  Dockerfile  Dockerfile-rpi  build_defaults.env  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  transport.template  wm_gateway.env
deliverable/: Dockerfile-rpi  Dockerfile-x86  docker-compose-x86.yml  docker-compose.yml  instructions.rst  wm_gateway.env
docker/: README.md
ipv6_service/: Readme.md  ipv6_service.py  wirepas_sudo_rights  wirepas_tlv_app_config.py
jenkins/: build.sh
local_history_service/: local_history_service.py
modules/: common.sh  docker.sh  git.sh
python_transport/: .gitignore  LICENSE  Pipfile  README.md  README.rst  dev-requirements.txt  generate_package.sh  pyproject.toml  requirements.txt  setup.py
rtc_service/: README.md  rtc_service.py
sink_service/: CMakeLists.txt  Howto_assign_symlink_to_sinks.txt  README.md  assigning_symlink_to_sinks.md  com.wirepas.sink.conf  makefile
sink_service/source/: config.c  config.h  config_macros.h  data.c  data.h  main.c  otap.c  otap.h
utils/: fetch_docs.sh  fetch_wheel.sh  pull_repos.sh  service_launcher.sh  settings.env  sink.template  transport.template
(+105 files in other folders)
